# flutter-webrtc

./: pubspec.yaml
android/: build.gradle  download_models.gradle  local.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: CMakeCache.txt  CMakeLists.txt  Makefile  build_librnnoise.sh  cmake_install.cmake  rnnoise_wrapper.c
android/jni/rnnoise/: Makefile  config.status
android/jni/rnnoise/.libs/: librnnoise.0.dylib
android/jni/rnnoise/autom4te.cache/: requests
android/jni/rnnoise/examples/: rnnoise_demo
android/jni/rnnoise/examples/.libs/: rnnoise_demo
android/src/main/: AndroidManifest.xml
android/src/main/java/com/cloudwebrtc/webrtc/: DataChannelObserver.java  FlutterRTCFrameCryptor.java  FlutterRTCVideoRenderer.java  FlutterRTCVirtualBackground.kt  GetUserMediaImpl.java  MethodCallHandlerImpl.java  OrientationAwareScreenCapturer.java  PeerConnectionObserver.java  SimulcastVideoEncoderFactoryWrapper.kt  StateProvider.java
android/src/main/java/com/cloudwebrtc/webrtc/audio/: AudioInterceptorCallback.java  AudioSwitchManager.java  RNNoiseProcessor.java
android/src/main/java/com/cloudwebrtc/webrtc/record/: AudioSamplesInterceptor.java  AudioTrackInterceptor.java  MediaRecorderImpl.java
android/src/main/java/com/cloudwebrtc/webrtc/utils/: AnyThreadResult.java  ImageSegmenterHelper.kt  MediaConstraintsUtils.java  NoiseReductionProcessor.java  PermissionUtils.java  RNNoiseWrapper.java
android/src/main/java/org/webrtc/audio/: WebRtcAudioTrackUtils.java
common/darwin/Classes/: AudioUtils.m  FlutterRTCDesktopCapturer.m  FlutterWebRTCPlugin.h  FlutterWebRTCPlugin.m
example/android/app/: build.gradle
example/lib/: main.dart
ios/: flutter_webrtc.podspec
lib/src/: helper.dart
lib/src/native/: rtc_peerconnection_impl.dart  rtc_video_renderer_impl.dart  rtc_video_view_impl.dart
